# Glade2Haskell

./: Glade2Haskell.cabal  README.md
app/: Main.hs
example/: neccontrolgui.glade
src/: Glade2Haskell.hs  Widget.hs  Widget2Haskell.hs  WidgetExtract.hs
